--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,13 @@
 {
-    "version": 2,
-    "builds":[
+    "builds": [{
+        "src": "hotel/hotel/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    }],
+    "routes": [
         {
-            "src":"hotel/wsgi.py",
-            "use":"@vercel/python",
-            "config":{"maxLambdaSize":"15mb", "runtime":"python3.10"}
-        },
-        {
-            "src":"build_files.sh",
-            "use":"@vercel/static-build",
-            "config":{
-                "distDir":"staticfiles_build"
-            }
-        }
-    ],
-    "routes":[
-        {
-            "src":"/static/(.*)",
-            "dest":"/static/$1"
-        },
-        {
-            "src":"/(.*)",
-            "dest":"hotel/wsgi.py"
+            "src": "/(.*)",
+            "dest": "hotel/hotel/wsgi.py"
         }
     ]
 }
